added leagues and playoffs

--- a/Tournament/Views/Leagues/Delete.cshtml
+++ b/Tournament/Views/Leagues/Delete.cshtml
@@ -40,6 +40,14 @@ Deleting a leagues will:
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Divisions)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Divisions)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Active)
         </dt>
 
@@ -54,12 +62,12 @@ Deleting a leagues will:
         <dd>
             @Html.DisplayFor(model => model.TiesAllowed)
         </dd>
-        
+
 
         <dt>
             @Html.DisplayNameFor(model => model.PointsCount)
         </dt>
-        <dd >
+        <dd>
             @Html.DisplayFor(model => model.PointsCount)
         </dd>
 
@@ -85,7 +93,7 @@ Deleting a leagues will:
         <dd>
             @Html.DisplayFor(model => model.ByePoints)
         </dd>
-        
+
         <dt>
             @Html.DisplayNameFor(model => model.StartWeek)
         </dt>
@@ -93,7 +101,7 @@ Deleting a leagues will:
         <dd>
             @Html.DisplayFor(model => model.StartWeek)
         </dd>
-        
+
         <dt>
             @Html.DisplayNameFor(model => model.PointsLimit)
         </dt>
