--- a/Tournament/Views/Shared/_Layout.cshtml
+++ b/Tournament/Views/Shared/_Layout.cshtml
@@ -38,20 +38,21 @@
                         <li class="menu-item dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">League Play<b class="caret"></b></a>
                             <ul class="dropdown-menu">
-                                <li>@Html.ActionLink("Players", "Index", "Players", new {id = leagueid}, null)</li>
+                                <li>@Html.ActionLink("Players", "Index", "Players", new { id = leagueid }, null)</li>
                                 <li>@Html.ActionLink("Schedule", "Index", "Schedules", new { id = leagueid }, null)</li>
                                 <li>@Html.ActionLink("Teams", "Index", "Teams", new { id = leagueid }, null)</li>
-                                <li>@Html.ActionLink("Matches", "Index", "Matches", new { id = leagueid}, null)</li>
+                                <li>@Html.ActionLink("Matches", "Index", "Matches", new { id = leagueid }, null)</li>
                                 <li>@Html.ActionLink("Byes Report", "ByesReport", "Matches", new { id = leagueid }, null)</li>
                                 <li>@Html.ActionLink("Schedule Report", "ScheduleReport", "GetSchedule", new { id = leagueid }, null)</li>
-                                
+
 
                                 @if (User.IsInRole("Admin") ||
                                      User.IsInRole("LeagueAdmin"))
                                 {
                                     <li>----------------------------</li>
-                                    <li>@Html.ActionLink("Create Matches", "CreateMatches", "Matches", new {id=leagueid},null)</li>
-                                    <li>@Html.ActionLink("Delete Matches", "ClearSchedule", "Matches", new {id=leagueid},null)</li>
+                                    <li>@Html.ActionLink("Create Matches", "CreateMatches", "Matches", new { id = leagueid }, null)</li>
+                                    <li>@Html.ActionLink("Upload Matches", "Upload", "Matches", new { id = leagueid }, null)</li>
+                                    <li>@Html.ActionLink("Delete Matches", "ClearSchedule", "Matches", new { id = leagueid }, null)</li>
                                 }
                             </ul>
                         </li>
