--- a/Tournament/Views/Leagues/Create.cshtml
+++ b/Tournament/Views/Leagues/Create.cshtml
@@ -38,6 +38,14 @@
     </div>
 
     <div class="form-group">
+        @Html.LabelFor(model => model.Divisions, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Divisions, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Divisions, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
         @Html.LabelFor(model => model.TiesAllowed, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             <div class="checkbox">
