--- a/Tournament/Views/Leagues/Edit.cshtml
+++ b/Tournament/Views/Leagues/Edit.cshtml
@@ -11,94 +11,102 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h4>League</h4>
-        <hr/>
-        @Html.ValidationSummary(true, "", new {@class = "text-danger"})
-        @Html.HiddenFor(model => model.id)
-        @Html.HiddenFor(model => model.rowversion)
-        @Html.HiddenFor(model => model.TiesAllowed)
-        @Html.HiddenFor(model => model.PointsCount)
-        @Html.HiddenFor(model => model.WinPoints)
-        @Html.HiddenFor(model => model.TiePoints)
-        @Html.HiddenFor(model => model.ByePoints)
-        @Html.HiddenFor(model => model.TeamSize)
+<div class="form-horizontal">
+    <h4>League</h4>
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.HiddenFor(model => model.id)
+    @Html.HiddenFor(model => model.rowversion)
+    @Html.HiddenFor(model => model.TiesAllowed)
+    @Html.HiddenFor(model => model.PointsCount)
+    @Html.HiddenFor(model => model.WinPoints)
+    @Html.HiddenFor(model => model.TiePoints)
+    @Html.HiddenFor(model => model.ByePoints)
+    @Html.HiddenFor(model => model.TeamSize)
+    @Html.HiddenFor(model => model.Divisions)
 
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.LeagueName, htmlAttributes: new {@class = "control-label col-md-2"})
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.LeagueName, new {htmlAttributes = new {@class = "form-control"}})
-                @Html.ValidationMessageFor(model => model.LeagueName, "", new {@class = "text-danger"})
-            </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.LeagueName, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.LeagueName, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.LeagueName, "", new { @class = "text-danger" })
         </div>
+    </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.TeamSize, htmlAttributes: new {@class = "control-label col-md-2"})
-            <div class="col-md-10 ">
-                @Html.DisplayFor(model => model.TeamSize)
-            </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.TeamSize, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10 ">
+            @Html.DisplayFor(model => model.TeamSize)
         </div>
+    </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Active, htmlAttributes: new {@class = "control-label col-md-2"})
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.Active)
-                    @Html.ValidationMessageFor(model => model.Active, "", new {@class = "text-danger"})
-                </div>
-            </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Divisions, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10 ">
+            @Html.DisplayFor(model => model.Divisions)
         </div>
+    </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.TiesAllowed, htmlAttributes: new {@class = "control-label col-md-2"})
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.DisplayFor(model => model.TiesAllowed)
-                </div>
-            </div>
-        </div>
-
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.PointsCount, htmlAttributes: new {@class = "control-label col-md-2"})
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.DisplayFor(model => model.PointsCount)
-                </div>
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.WinPoints, htmlAttributes: new {@class = "control-label col-md-2"})
-            <div class="col-md-10">
-                @Html.DisplayFor(model => model.WinPoints)
-            </div>
-        </div>
-
-       
-        <div class="form-group">
-            @Html.LabelFor(model => model.TiePoints, htmlAttributes: new {@class = "control-label col-md-2"})
-            <div class="col-md-10">
-                @Html.DisplayFor(model => model.TiePoints)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ByePoints, htmlAttributes: new {@class = "control-label col-md-2"})
-            <div class="col-md-10">
-                @Html.DisplayFor(model => model.ByePoints)
-            </div>
-        </div>
-        
-        <div class="form-group">
-            @Html.LabelFor(model => model.StartWeek, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.StartWeek, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.StartWeek, "", new { @class = "text-danger" })
+    <div class="form-group">
+        @Html.LabelFor(model => model.Active, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            <div class="checkbox">
+                @Html.EditorFor(model => model.Active)
+                @Html.ValidationMessageFor(model => model.Active, "", new { @class = "text-danger" })
             </div>
         </div>
     </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.TiesAllowed, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            <div class="checkbox">
+                @Html.DisplayFor(model => model.TiesAllowed)
+            </div>
+        </div>
+    </div>
+
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.PointsCount, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            <div class="checkbox">
+                @Html.DisplayFor(model => model.PointsCount)
+            </div>
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.WinPoints, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DisplayFor(model => model.WinPoints)
+        </div>
+    </div>
+
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.TiePoints, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DisplayFor(model => model.TiePoints)
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.ByePoints, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DisplayFor(model => model.ByePoints)
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.StartWeek, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.StartWeek, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.StartWeek, "", new { @class = "text-danger" })
+        </div>
+    </div>
+</div>
 
     <div class="form-group">
         @Html.LabelFor(model => model.PointsLimit, htmlAttributes: new {@class = "control-label col-md-2"})
