--- a/Tournament/Views/Schedules/Delete.cshtml
+++ b/Tournament/Views/Schedules/Delete.cshtml
@@ -22,6 +22,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.PlayOffs)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.PlayOffs)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Cancelled)
         </dt>
 
