--- a/Tournament/Views/Teams/Create.cshtml
+++ b/Tournament/Views/Teams/Create.cshtml
@@ -9,32 +9,51 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
 <div class="form-horizontal">
     <h4>Team</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.Leagueid)
-    @Html.HiddenFor(model=>model.TeamNo);
+    @Html.HiddenFor(model => model.TeamNo);
+
     <div class="form-group">
         @Html.LabelFor(model => model.TeamNo, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.DisplayFor(model => model.TeamNo, new { htmlAttributes = new { @class = "form-control" } })
         </div>
     </div>
+    @{
+        if ((int)ViewBag.NumberDivisions > 1)
+        {
+            <div class="form-group">
+                @Html.LabelFor(model => model.DivisionId, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownListFor(model => model.DivisionId, new SelectList(ViewBag.Divisions, "DivisionID", "DivisionNumber", Model.DivisionId), htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.DivisionId, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        }
+        else
+        {
+            @Html.HiddenFor(model => model.DivisionId)
+        }
+
+    }
 
     <div class="form-group">
         <div class="form-group">
             @Html.LabelFor(model => model.Skip, "Skip", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.Skip, new SelectList(ViewBag.List, "id", "FullName",Model.Skip), htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownListFor(model => model.Skip, new SelectList(ViewBag.List, "id", "FullName", Model.Skip), htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Skip, "", new { @class = "text-danger" })
             </div>
         </div>
     </div>
+
 
     @{
         if ((int)ViewBag.TeamSize > 2)
@@ -42,7 +61,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.ViceSkip, "Vice Skip", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownListFor(model => model.ViceSkip, new SelectList(ViewBag.List, "id", "FullName",Model.ViceSkip), htmlAttributes: new { @class = "form-control" })
+                    @Html.DropDownListFor(model => model.ViceSkip, new SelectList(ViewBag.List, "id", "FullName", Model.ViceSkip), htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.ViceSkip, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -60,7 +79,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Lead, "Lead", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownListFor(model => model.Lead, new SelectList(ViewBag.List, "id", "FullName",Model.Lead),  htmlAttributes: new { @class = "form-control" })
+                    @Html.DropDownListFor(model => model.Lead, new SelectList(ViewBag.List, "id", "FullName", Model.Lead), htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Lead, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -71,13 +90,13 @@
             @Html.HiddenFor(model => model.Lead)
         }
     }
-   
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Save" class="btn btn-default" />
         </div>
+    </div>
 </div>
 }
 
