--- a/Tournament/Views/Teams/Edit.cshtml
+++ b/Tournament/Views/Teams/Edit.cshtml
@@ -11,75 +11,92 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
 <div class="form-horizontal">
     <h4>Team</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.id)
-        @Html.HiddenFor(model => model.Leagueid)
-        @Html.HiddenFor(model => model.TeamNo)
-        @Html.HiddenFor(model => model.rowversion)
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.HiddenFor(model => model.id)
+    @Html.HiddenFor(model => model.Leagueid)
+    @Html.HiddenFor(model => model.TeamNo)
+    @Html.HiddenFor(model => model.rowversion)
+    @{
+        if (ViewBag.NumberDivisions == 1) {
+            @Html.HiddenFor(model => model.DivisionId);
+            }
+     }
 
+    <div class="form-group">
+        @Html.LabelFor(model => model.TeamNo, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DisplayFor(model => model.TeamNo, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.TeamNo, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    @{
+        if((int) ViewBag.NumberDivisions > 1) { 
         <div class="form-group">
-            @Html.LabelFor(model => model.TeamNo, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.DivisionId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DisplayFor(model => model.TeamNo, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TeamNo, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(model => model.DivisionId, new SelectList(ViewBag.Divisions, "DivisionId", "DivisionNumber", Model.DivisionId), htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.DivisionId, "", new { @class = "text-danger" })
             </div>
         </div>
+       }
+    }
 
+    <div class="form-group">
         <div class="form-group">
+            @Html.LabelFor(model => model.Skip, "Skip", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.Skip, new SelectList(ViewBag.List, "id", "FullName", Model.Skip), htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Skip, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    </div>
+
+    @{
+        if ((int)ViewBag.TeamSize > 2)
+        {
             <div class="form-group">
-                @Html.LabelFor(model => model.Skip, "Skip", htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.ViceSkip, "Vice Skip", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownListFor(model => model.Skip, new SelectList(ViewBag.List, "id", "FullName", Model.Skip), htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.Skip, "", new { @class = "text-danger" })
+                    @Html.DropDownListFor(model => model.ViceSkip, new SelectList(ViewBag.List, "id", "FullName", Model.ViceSkip), htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.ViceSkip, "", new { @class = "text-danger" })
                 </div>
             </div>
-        </div>	
-
-        @{
-            if ((int)ViewBag.TeamSize > 2)
-            {
-                <div class="form-group">
-                    @Html.LabelFor(model => model.ViceSkip, "Vice Skip", htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.DropDownListFor(model => model.ViceSkip, new SelectList(ViewBag.List, "id", "FullName", Model.ViceSkip), htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.ViceSkip, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-            }
-            else
-            {
-
-                @Html.HiddenFor(model => model.ViceSkip)
-            }
         }
+        else
+        {
 
-        @{
-            if ((int)ViewBag.TeamSize > 1)
-            {
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Lead, "Lead", htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.DropDownListFor(model => model.Lead, new SelectList(ViewBag.List, "id", "FullName", Model.Lead), htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.Lead, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-            }
-            else
-            {
-
-                @Html.HiddenFor(model => model.Lead)
-            }
+            @Html.HiddenFor(model => model.ViceSkip)
         }
+    }
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+    @{
+        if ((int)ViewBag.TeamSize > 1)
+        {
+            <div class="form-group">
+                @Html.LabelFor(model => model.Lead, "Lead", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownListFor(model => model.Lead, new SelectList(ViewBag.List, "id", "FullName", Model.Lead), htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.Lead, "", new { @class = "text-danger" })
+                </div>
             </div>
+        }
+        else
+        {
+
+            @Html.HiddenFor(model => model.Lead)
+        }
+    }
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Save" class="btn btn-default" />
         </div>
+    </div>
 </div>
 }
 
@@ -92,6 +109,10 @@
 <h2>Teams So Far</h2>
     <table class="table-condensed table-striped">
         <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.DivisionId)
+            </th>
+
             <th>
                 @Html.DisplayNameFor(model => model.TeamNo)
             </th>
@@ -121,6 +142,9 @@
         @foreach (var item in (IEnumerable<Tournament.Models.Team>)ViewBag.Teams)
         {
             <tr>
+                <th>
+                    @Html.DisplayFor(modelItem => item.DivisionId)
+                </th>
                 <th>
                     @Html.DisplayFor(modelItem => item.TeamNo)
                 </th>
