hide payoffs and add console app

--- a/Tournament/Views/Leagues/Delete.cshtml
+++ b/Tournament/Views/Leagues/Delete.cshtml
@@ -63,6 +63,13 @@ Deleting a leagues will:
             @Html.DisplayFor(model => model.TiesAllowed)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.PlayOffs)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.PlayOffs)
+        </dd>
 
         <dt>
             @Html.DisplayNameFor(model => model.PointsCount)
