--- a/Tournament/Views/Leagues/Create.cshtml
+++ b/Tournament/Views/Leagues/Create.cshtml
@@ -56,6 +56,16 @@
     </div>
 
     <div class="form-group">
+        @Html.LabelFor(model => model.PlayOffs, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            <div class="checkbox">
+                @Html.EditorFor(model => model.PlayOffs)
+                @Html.ValidationMessageFor(model => model.PlayOffs, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    </div>
+
+    <div class="form-group">
         @Html.LabelFor(model => model.PointsCount, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             <div class="checkbox">
