--- a/Tournament/Views/Leagues/Index.cshtml
+++ b/Tournament/Views/Leagues/Index.cshtml
@@ -31,6 +31,10 @@
         </th>
 
         <th>
+            @Html.DisplayNameFor(model => model.PlayOffs)
+        </th>
+
+        <th>
             @Html.DisplayNameFor(model => model.PointsCount)
         </th>
 
@@ -74,6 +78,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.TiesAllowed)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.PlayOffs)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.PointsCount)
