--- a/Tournament/Views/Schedules/Edit.cshtml
+++ b/Tournament/Views/Schedules/Edit.cshtml
@@ -31,15 +31,24 @@
         </div>
     </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.PlayOffs, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            <div class="checkbox">
-                @Html.EditorFor(model => model.PlayOffs)
-                @Html.ValidationMessageFor(model => model.PlayOffs, "", new { @class = "text-danger" })
+    @{
+        if ((bool)ViewBag.Playoffs)
+        {
+            <div class="form-group">
+                @Html.LabelFor(model => model.PlayOffs, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    <div class="checkbox">
+                        @Html.EditorFor(model => model.PlayOffs)
+                        @Html.ValidationMessageFor(model => model.PlayOffs, "", new { @class = "text-danger" })
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
+        }
+        else
+        {
+            @Html.HiddenFor(model => model.PlayOffs)
+        }
+    }
 
     <div class="form-group">
         @Html.LabelFor(model => model.Cancelled, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -71,10 +80,19 @@
         <th>
             @Html.DisplayNameFor(model => model.GameDate)
         </th>
+        @{
+
+            if ((bool)ViewBag.Playoffs)
+            {
+                <th>
+                    @Html.DisplayNameFor(model => model.PlayOffs)
+                </th>
+            }
+         }
         <th>
             @Html.DisplayNameFor(model => model.Cancelled)
         </th>
-    </tr>
+            </tr>
     @foreach (var item in (IEnumerable<Tournament.Models.Schedule>)ViewBag.Schedule)
     {
         <tr>
@@ -84,6 +102,14 @@
             <td>
                 @Html.DisplayFor(modelItem => item.GameDate)
             </td>
+            @{
+                if ((bool)ViewBag.Playoffs)
+                {
+                        <td>
+                            @Html.DisplayFor(modelItem => item.PlayOffs)
+                        </td>
+                }
+            }
             <td>
                 @Html.DisplayFor(modelItem => item.Cancelled)
             </td>
