added division algorithm

--- a/Tournament/Views/Shared/_Layout.cshtml
+++ b/Tournament/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Activities.Statements
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -51,7 +50,6 @@
                                 {
                                     <li>----------------------------</li>
                                     <li>@Html.ActionLink("Create Matches", "CreateMatches", "Matches", new { id = leagueid }, null)</li>
-                                    <li>@Html.ActionLink("Upload Matches", "Upload", "Matches", new { id = leagueid }, null)</li>
                                     <li>@Html.ActionLink("Delete Matches", "ClearSchedule", "Matches", new { id = leagueid }, null)</li>
                                 }
                             </ul>
